# saarctf-vulnbox

./: .editorconfig  .gitignore  README.md  checkers-run.sh  cloudbuild.py  exploits-run.sh  nginx.config  pyproject.toml  router.yaml  testbox.yaml  vulnbox-cloud.json  vulnbox.yaml  vulnbuild.py
cloudhosting-scripts/: convert_selfhosted_to_orga_system.sh  install_bundle_for_orgahosted_cloud.sh
cloudscripts/: install-hetzner-cloud.sh
debian/: bullseye.json  buster.json  initial_setup.sh  stretch.json  test-and-configure-aptcache.sh
frontpage/: style.less  style.min.css
frontpage-testbox/: index.css  style.less
patch-deployment/: README.md  patch-deploy-template.yaml  test-vulnboxes.yaml  vulnboxes.yaml
patch-deployment/example-patch/: apply-stahl4-fixbrokenstuff.sh  patch-deploy-example.yaml
podman/: .gitignore  template.Dockerfile  test-and-configure-aptcache.sh
projects/: .gitignore
projects/saarctf-2023/: vulnbuild.yaml
projects/workshop/: vulnbuild.yaml
resources/cloud-scripts/: install-hetzner-cloud.sh
resources/frontpage-testbox/: saarctf  (+3 more)
router-setup-scripts/: internet-access-vm-disable.sh  internet-access-vm-enable.sh  setup-network.py  setup-password.py
scripts/: 10_basics.sh  20_vulnbox_utils.sh  25_sid.sh  35_append_only.sh  80_system_config.sh  81_podman_config.sh  81_testbox_config.sh  81_vulnbox_config.sh  90_cleanup.sh
setup-scripts/: setup-network.py  setup-password.py
ssh/: README.md
tests/: test_hcl.py
utils/: docker-compose.yml  import_vm.sh
vulnbuild/: __main__.py  builds.py  config.py  project.py  tasks.py  ui.py
(+60 files in other folders)
